# delta-tables

./: .pre-commit-config.yaml  README.md  config.py  pyproject.toml
delta_tables/apps/: context.py  delta_log.ipynb
tests/: conftest.py  setup.py
tests/test_data/: db_1.py
tests/unit/: test_some_test.py
