[tool.poetry]
name = "delta-tables"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.1"
black = "^24.2.0"
pylint = "^3.1.0"
isort = "^5.13.2"
pre-commit = "^3.6.2"
pytest = "^8.1.1"
loguru = "^0.7.2"
mypy = "^1.9.0"
ipykernel = "^6.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
